--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="title"><span>About Me</span></div>
       <div class="about-details">
         <div class="left">
-          <img src="images/about.jpg" alt="About Image" />
+          <img src="Images/about.jpg" alt="About Image" />
         </div>
         <div class="right">
           <div class="topic">Passionate About Clean Code and Intuitive UI/UX</div>
@@ -210,5 +210,6 @@
   </section>
 
 </body>
+
 
 </html>
